--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Donate For Cause</title>
+
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="./webfonts/all.min.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>DFS</title>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
   </head>
-  <body id="home" data-spy="scroll" data-target="#main-nav">
+
+  <body id="home" data-spy="scroll" data-target="#mai-nav">
     <!-- Navbar -->
     <nav
       class="navbar navbar-expand-md navbar-light fixed-top py-2"
@@ -108,16 +117,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <div class="card text-center border-primary mb-resp">
+            <div class="card text-center brd-cyan">
               <div class="card-body">
                 <i class="fas fa-hand-holding-heart fa-4x py-3 cyan"></i>
-                <h3 class="text-primary">$60M</h3>
+                <h3 class="cyan">$60M</h3>
                 <p class="text-muted">Fund Raised</p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card text-center text-white bg-primary mb-resp">
+            <div class="card text-center text-white bgg-cyan">
               <div class="card-body">
                 <i class="fas fa-check-circle fa-4x py-3 help"></i>
                 <h3>9,200</h3>
@@ -126,16 +135,16 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card text-center border-primary mb-resp">
+            <div class="card text-center brd-cyan">
               <div class="card-body">
                 <i class="fas fa-hands-helping fa-4x py-3 cyan"></i>
-                <h3 class="text-primary">5,800</h3>
+                <h3 class="cyan">5,800</h3>
                 <p class="text-muted">Donations</p>
               </div>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card text-center text-white bg-primary mb-resp">
+            <div class="card text-center text-white bgg-cyan">
               <div class="card-body">
                 <i class="fas fa-users fa-4x py-3 help"></i>
                 <h3>3,000</h3>
@@ -153,7 +162,7 @@
         <div class="row">
           <div class="col">
             <div class="info-header mb-5">
-              <h1 class="text-primary pb-3">Why Donate?</h1>
+              <h1 class="cyan pb-3">Why Donate?</h1>
               <p class="lead pb-3">
                 Those who give to charity are also participating in a cause that
                 is larger and more significant than themselves. Even the
@@ -258,7 +267,7 @@
         <div class="row">
           <div class="col">
             <div class="info-header mb-5">
-              <h1 class="text-primary pb-3">Meet Our Volunteers</h1>
+              <h1 class="cyan pb-3">Meet Our Volunteers</h1>
               <p class="lead">
                 Thank you for being the reason for Someone's Smile.
               </p>
@@ -464,7 +473,7 @@
               <input
                 type="submit"
                 value="Submit"
-                class="btn btn-primary btn-lg btn-block"
+                class="btn btn-cyan btn-lg btn-block text-white"
               />
             </form>
           </div>
@@ -473,7 +482,7 @@
     </section>
 
     <!-- Footer -->
-    <footer id="main-footer" class="py-3 bg-primary text-white">
+    <footer id="main-footer" class="py-3 bgg-cyan text-white">
       <div class="container">
         <div class="text-center pt-2">
           <p class="lead">Copyrights &copy;<span id="year"></span></p>
@@ -483,6 +492,13 @@
     <script
       src="http://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
       crossorigin="anonymous"
     ></script>
 
@@ -584,7 +600,7 @@
             {
               scrollTop: $(hash).offset().top,
             },
-            900,
+            1400,
             function () {
               // Add hash to URL after scroll
               window.location.hash = hash;
